[package]
name = "quilt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
byteorder = "1.5.0"
eframe = "0.29.1"
egui = "0.29.1"
gfarch = "0.2.1"
hex = "0.4.3"
reqwest = { version = "0.12.9", features = ["blocking"] }
rfd = "0.15.1"
serde_json = { version = "1.0.133", features = ["preserve_order"] }
