[package]
name = "quilt"
version = "1.2.2"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
byteorder = "1.5.0"
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = "0.29.1"
gctex = "0.3.12"
gfarch = "0.3.0"
hex = "0.4.3"
image = "0.25.5"
rayon = "1.11.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
rfd = "0.15.1"
serde_json = { version = "1.0.133", features = ["preserve_order"] }

[build-dependencies]
winresource = "0.1.19"
